--- a/index.html
+++ b/index.html
@@ -24,30 +24,30 @@
             </ul>
         </nav>
     </header>
-    <figure class="hero"><!--changed from div class--></figure>
-    <section class="content"><!--changed from div-->
+    <figure class="hero" aria-label="Image of team working together at an office table"><!--changed from div class to figure tag, included aria labelling--></figure>
+    <main class="content"><!--changed from div-->
         <section class="search-engine-optimization"><!--changed from div class-->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <figure aria-label="Notebook with SEO notes on desk with coffee cup laptop and pens"><img src="./assets/images/search-engine-optimization.jpg" class="float-left" /></figure><!--added figure element, included ARIA labelling-->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management"><!--changed from div-->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <figure aria-label="Laptop with a graph labelled Representation, trending upward"><img src="./assets/images/online-reputation-management.jpg" class="float-right" /></figure><!--added figure element, included ARIA labelling-->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing"><!--changed from div-->
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <figure aria-label="Birds eye view of people sitting around a table with laptops and social media buzzwords and images scattered across tabletop"><img src="./assets/images/social-media-marketing.jpg" class="float-left" /></figure><!--added figure element, included ARIA labelling-->
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social  media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-    </section>
+    </main>
 
     <aside class="benefits"><!--changed from div-->
         <div class="benefit-lead">
