fourth commit updating css and semantic html

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+<head> 
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
 </head>
 
 <body>
-    <header><!--changed from div class header-->
+    <header><!--changed from div class header to header element-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav><!--changed from div class header-->
+        <nav><!--changed from div class header to nav element-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,52 +25,52 @@
         </nav>
     </header>
     <figure class="hero" aria-label="Image of team working together at an office table"><!--changed from div class to figure tag, included aria labelling--></figure>
-    <main class="content"><!--changed from div-->
-        <section class="search-engine-optimization"><!--changed from div class-->
+    <main class="content"><!--changed from div to main-->
+        <article class="search-engine-optimization"><!--changed from div to article-->
             <figure aria-label="Notebook with SEO notes on desk with coffee cup laptop and pens"><img src="./assets/images/search-engine-optimization.jpg" class="float-left" /></figure><!--added figure element, included ARIA labelling-->
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </section>
-        <section id="online-reputation-management" class="online-reputation-management"><!--changed from div-->
+        </article>
+        <article id="online-reputation-management" class="online-reputation-management"><!--changed from div to article-->
             <figure aria-label="Laptop with a graph labelled Representation, trending upward"><img src="./assets/images/online-reputation-management.jpg" class="float-right" /></figure><!--added figure element, included ARIA labelling-->
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </section>
-        <section id="social-media-marketing" class="social-media-marketing"><!--changed from div-->
+        </article>
+        <article id="social-media-marketing" class="social-media-marketing"><!--changed from div to article-->
             <figure aria-label="Birds eye view of people sitting around a table with laptops and social media buzzwords and images scattered across tabletop"><img src="./assets/images/social-media-marketing.jpg" class="float-left" /></figure><!--added figure element, included ARIA labelling-->
             <h2>Social Media Marketing</h2>
             <p>
                 Social  media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </section>
+        </article>
     </main>
 
-    <aside class="benefits"><!--changed from div-->
-        <div class="benefit-lead">
+    <aside><!--changed from div to aside-->
+        <article class="benefit-lead"><!--changed from div to article-->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </article>
+        <article class="benefit-brand"><!--changed from div to article-->
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </article>
+        <article class="benefit-cost"><!--changed from div to article-->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
+        </article>
     </aside>
     <footer><!--changed from div class footer-->
         <h2>Made with ❤️️ by Horiseon</h2>
