final tweaks. probably.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 content="Search Engine Optimization and Social Media Management"><!--added meta description to enhance SEO-->
 <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>HoriSeon</title><!--updated title-->
 </head>
 
 <body>
