corrected searchengineoptimization link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ content="Search Engine Optimization and Social Media Management"><!--added meta 
     </header>
     <figure class="hero" aria-label="Image of team working together at an office table"><!--changed from div class to figure tag, included aria labelling--></figure>
     <main class="content"><!--changed from div to main-->
-        <article class="search-engine-optimization"><!--changed from div to article-->
+        <article id="search-engine-optimization" class="search-engine-optimization"><!--changed from div to article-->
             <figure><img alt ="Notebook with SEO notes on desk with coffee cup laptop and pens" src="./assets/images/search-engine-optimization.jpg" class="float-left" /></figure><!--added figure element, added alt-->
             <h2>Search Engine Optimization</h2>
             <p>
